--- a/Project2/Cargo.toml
+++ b/Project2/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "Project2"
 version = "0.1.0"
-authors = ["Glenn <47393384+glnnrhodes@users.noreply.github.com>"]
+authors = ["Glenn, Tymoore, Michael, Andrew"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
