changes to toml

--- a/Project2/Cargo.toml
+++ b/Project2/Cargo.toml
@@ -3,8 +3,15 @@ name = "Project2"
 version = "0.1.0"
 authors = ["Glenn, Tymoore, Michael, Andrew"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Implementations of red black tree and AVL tree"
+documentation = "https://github.com/ECE421Group11/Project2"
+homepage = "https://github.com/ECE421Group11/Project2"
+repository = "https://github.com/ECE421Group11/Project2"
+readme = "https://github.com/ECE421Group11/Project2"
+keywords = ["redblacktree", "avltree", "tree", "rbtree"]
+categories = ["data-structures", "algorithms"]
+license = "https://github.com/ECE421Group11/Project2"
+license-file = "https://github.com/ECE421Group11/Project2"
 
 [dependencies]
 slab = "0.4.2"
