--- a/Project2/Cargo.toml
+++ b/Project2/Cargo.toml
@@ -7,7 +7,7 @@ description = "Implementations of red black tree and AVL tree"
 documentation = "https://github.com/ECE421Group11/Project2"
 homepage = "https://github.com/ECE421Group11/Project2"
 repository = "https://github.com/ECE421Group11/Project2"
-readme = "repo"
+readme = "repo.txt"
 keywords = ["redblacktree", "avltree", "tree", "rbtree"]
 categories = ["data-structures", "algorithms"]
 license = "license.txt"
