--- a/Project2/Cargo.toml
+++ b/Project2/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/ECE421Group11/Project2"
 readme = "repo.txt"
 keywords = ["redblacktree", "avltree", "tree", "rbtree"]
 categories = ["data-structures", "algorithms"]
-license = "license.txt"
+license = "MIT License"
 
 [dependencies]
 slab = "0.4.2"
