--- a/Project2/Cargo.toml
+++ b/Project2/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "Project2"
-version = "0.1.0"
-authors = ["Glenn, Tymoore, Michael, Andrew"]
+name = "RB-AVL-TREE"
+version = "0.2.0"
+authors = ["Glenn, Tymoore, Micheal, Andrew"]
 edition = "2018"
 description = "Implementations of red black tree and AVL tree"
 documentation = "https://github.com/ECE421Group11/Project2"
